--- a/style.css
+++ b/style.css
@@ -2,11 +2,10 @@
     padding:0;
     margin:0;
     box-sizing: border-box;
+    font-family: 'Outfit', sans-serif;
 }
 
 body{
-    font-family: 'Outfit', sans-serif;
-
     display:flex;
     justify-content: center;
     align-items: center;
@@ -24,29 +23,29 @@ body{
     width:320px;
 }
 
-img{
+.qr-img{
     border-radius:10px;
     width:100%;
 }
 
-h1{
-   
+.title{
+    margin: 24px 16px 16px 16px;
+
     font-style: normal;
     font-size: 22px;
     line-height: 28px;
     text-align: center;
 
     color:#1F314F;
-    margin: 24px 16px 16px 16px;
 }
 
-p{
+.text{
+    margin: 16px 32px 0px 32px;
+
     font-size: 15px;
     line-height: 19px;
     text-align: center;
     letter-spacing: 0.1875px;
 
     color:#7D889E;
-
-    margin: 16px 32px 0px 32px;
 }
